new feature: tracking user location

--- a/FoodBlog/app/src/main/res/layout/fragment_follow.xml
+++ b/FoodBlog/app/src/main/res/layout/fragment_follow.xml
@@ -14,19 +14,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/tvSearchBar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"
-            android:padding="16dp"
-            android:gravity="center_vertical"
-            android:text="@string/tv_search_user"
-            android:textSize="16sp"
-            app:drawableStartCompat="@drawable/ic_search"
-            android:drawablePadding="16dp"
-            android:background="@drawable/background_search_box_gray"/>
+            android:layout_marginHorizontal="16dp">
+            <TextView
+                android:id="@+id/tvSearchBar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="16dp"
+                android:gravity="center_vertical"
+                android:text="@string/tv_search_user"
+                android:textSize="16sp"
+                app:drawableStartCompat="@drawable/ic_search"
+                android:drawablePadding="16dp"
+                android:background="@drawable/background_search_box_gray"/>
+
+            <ImageView
+                android:id="@+id/imgViewLocationAllUsers"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:paddingHorizontal="8dp"
+                android:src="@drawable/baseline_location_on_24"
+                android:background="@drawable/background_ripple_rectangle"
+                android:backgroundTint="@color/gray_200"
+                app:tint="@color/gray_800"/>
+        </LinearLayout>
+
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayoutContent"
