--- a/FoodBlog/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FoodBlog/app/src/main/res/layout/activity_recipe_detail.xml
@@ -20,6 +20,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
             <ImageView
                 android:id="@+id/imgRecipeImage"
                 android:layout_width="match_parent"
@@ -27,6 +36,7 @@
                 android:minHeight="50dp"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
